<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="256dp">


    <TextView
        android:id="@+id/textView_job_details_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="2"
        android:textAppearance="@style/TextAppearance.Material.Title"
        android:textColor="@color/colorTePapaGreen"
        app:layout_constraintBottom_toTopOf="@+id/textView_job_details_created_at"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_textView_job_details_type"
        tools:text="Cybersecurity Firm Seeks Senior Developer" />

    <TextView
        android:id="@+id/textView_job_details_created_at"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.Material.Body2"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/textView_job_details_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView_job_details_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_job_details_title"
        tools:text="Posted on October 24,2019" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_textView_job_details_type"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:chipBackgroundColor="@color/colorDodgerBlue"
        android:text="@string/job_type"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/textView_job_details_title"
        app:layout_constraintEnd_toStartOf="@+id/imageView_job_details_bookmark"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_job_details_company_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/job_company_hint"
        android:textAppearance="@style/TextAppearance.Material.Subhead"
        android:textColor="@color/colorTePapaGreen"
        app:layout_constraintBottom_toTopOf="@+id/textView_job_details_company"
        app:layout_constraintEnd_toStartOf="@+id/textView_job_details_location_hint"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/imageView_job_details_company_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView_job_details_company_logo"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Company" />

    <TextView
        android:id="@+id/textView_job_details_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:singleLine="true"
        android:text="@string/job_default_text"
        android:textAppearance="@style/TextAppearance.Material.Body2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_job_details_company_logo"
        app:layout_constraintEnd_toStartOf="@+id/textView_job_details_location"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/imageView_job_details_company_logo"
        app:layout_constraintTop_toBottomOf="@+id/textView_job_details_company_hint"
        tools:text="Aon Cyber Solutions" />

    <TextView
        android:id="@+id/textView_job_details_location_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/job_location_hint"
        android:textAppearance="@style/TextAppearance.Material.Subhead"
        android:textColor="@color/colorTePapaGreen"
        app:layout_constraintBottom_toTopOf="@+id/textView_job_details_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_job_details_company_hint"
        app:layout_constraintTop_toTopOf="@+id/imageView_job_details_company_logo"
        tools:text="Location" />

    <TextView
        android:id="@+id/textView_job_details_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxHeight="30dp"
        android:singleLine="true"
        android:text="@string/job_default_text"
        android:textAppearance="@style/TextAppearance.Material.Body2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_job_details_company_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_job_details_company"
        app:layout_constraintTop_toBottomOf="@+id/textView_job_details_location_hint"
        tools:text="New York; Berlin" />

    <ImageView
        android:id="@+id/imageView_job_details_company_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintWidth_percent="0.15"
        app:srcCompat="@drawable/logo_test" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <ImageView
        android:id="@+id/imageView_job_details_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_job_details_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip_textView_job_details_type"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bookmark"
        android:contentDescription="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>